# goop

goop/: .gitignore  CMakeLists.txt  GTriMap.c  GTriMap.h  Makefile  README.md  Xyzzy.c  Xyzzy.h  Xyzzy.txt
goop/includes/: GConstants.h  GMap.h  GTree.h
goop/src/: GList.c  GMap.c  GNode.c  GObj.c  GQueue.c  GString.c  GTree.c  Goop.c
goop/tests/: GList_tests.c  GMap_tests.c  GNode_tests.c  GObj_tests.c  GQueue_tests.c  GTree_tests.c  Makefile  main.c  tests.h
includes/: GList.h  GNode.h  GObj.h  GQueue.h  GString.h  Goop.h
